HEAD
    + Now cloud-init is configured to preserve the sources list
    + Now variables are also provided to the setup scripts
    + Now _deployCopy returns whether the deployment was okay or not
    + Now if the setup script fails, an exception is thrown
    + Added imageNeedsUpdate and markImageUpdated methods to the virtualizers
    + Added global/identifier config key
    + Make anste-clean command work with any virtualizer
    + Added listVMs method to the virtualizers
    + Added identifier and conf command line arguments
    + Make bridge definition mandatory when using manual-bridging
    + Now the interface, the gateway and the first address from the config
      are passed to the tests and the suites as COMM_iface, COMM_gateway
      and COMM_firstAddress
    + Added master configuration key to set the IP of the master
    + Added finalConfigurations method to ANSTE::Image::Commands
    + Added ANSTE::Virtualizer::OpenStack with partial support
    + Added useOpenStack and setUseOpenStack to Anste::Status
    + Added virtualizerStatus and setVirtualizerStatus to Anste::Status
    + Added auto-snapshot for -break and -step modes
    + Show current test index and total tests
    + Now symlinks are dereferenced when tranfering the files to the slaves
    + Added deploy/auto-update config key to enable/disable the auto-update
      of base images before the deploy of scenarios
    + Added pre-update and post-update sections in the base image definitions
    + Added updateimg command that allow the update of base images
    + Added 'sikuli' test type to run sikuli tests in Windows machines
    + Use binmode in the file handler for the put command
    + Use IP set to eth0 in the scenario if any
    + Added script to generate the bundle for the windows slaves
    + Allow anste-master to run multiple scripts in the same host
    + New -vars option to override test vars with values in YAML file
    + Allow to substitute test variables with global values using $