@@ -1,4 +1,5 @@
 HEAD
+    + Adding browser global option for webdriver tests
     + Now cloud-init is configured to preserve the sources list
     + Now variables are also provided to the setup scripts
     + Now _deployCopy returns whether the deployment was okay or not
